# gptalk

./: .envrc  .pre-commit-config.yaml  .pythonrc.py  README.rst  pyproject.toml  ruff.toml
gptalk/: CodeGPT.txt  cli.py  constants.py  exceptions.py  models.py  postprocessing.py  preprocessing.py  prompt_adr.py  prompt_outline.py  prompt_ticket.py  prompt_vcard.py  prompts.py  talk.py  tokener.py  utils.py  vcard_prompt.txt
gptalk/templates/: brief.md
